--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
 <script type="importmap">
 {
   "imports": {
@@ -19,7 +20,7 @@
 }
 </script>
 </head>
-<body>
+<body class="bg-gray-900 text-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
