--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FUNSPOT</title>
+    <title>Fun For Skating Club</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,8 +11,13 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #FAF8F5; /* Matches the new design's background */
-            color: #4B5563; /* A suitable default dark gray for text */
+            background-color: #FFFFFF;
+            color: #374151; /* Default text color */
+        }
+        .text-outline {
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000, 
+                         -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000,
+                         -1px -1px 2px rgba(0,0,0,0.5);
         }
     </style>
 <script type="importmap">
